--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,34 +21,12 @@ jobs:
     name: Build
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
-
-      - name: Set up Node
-        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
-        with:
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
-          node-version: "20"
-
-      - name: Clean install dependencies and build
-        env:
-          TEST_WEB_HOST: "${{ secrets.TEST_WEB_HOST || 'https://localhost' }}"
-        run: |
-          npm ci
-          npm run build
+      - name: Create TXT for testing
+        run: echo "This is a test" > test.txt
 
       - name: Upload build as artifact
         uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
         if: always()
         with:
-          name: build-files
-          path: |
-            api/build
-            api/package-lock.json
-            api/package.json
-            client/build
-            client/package-lock.json
-            client/package.json
-            package-lock.json
-            package.json
+          name: test.txt
+          path: ./test.txt
